<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/search"-->
<!--        android:icon="@drawable/ic_search"-->
<!--        android:title="@string/search"-->
<!--        app:showAsAction="always"-->
<!--        app:actionViewClass="android.widget.SearchView" />-->

    <item
        android:id="@+id/showSystem"
        android:checkable="true"
        android:title="@string/show_system_apps" />

    <item
        android:id="@+id/showGoogle"
        android:checkable="true"
        android:title="@string/show_google_apps" />

    <item
        android:id="@+id/resetAll"
        android:title="@string/reset_all" />

    <item
        android:id="@+id/about"
        android:title="@string/about" />

</menu>